Fix integrated FinanceViewModel tests